--- a/research_platform/templates/accounts/publisher_detail.html
+++ b/research_platform/templates/accounts/publisher_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ publisher.profile.full_name }} - Research Platform{% endblock %}
+{% block title %}{{ publisher.profile.full_name }} - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
