--- a/research_platform/templates/accounts/register.html
+++ b/research_platform/templates/accounts/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Create Account - Research Platform{% endblock %}
+{% block title %}Create Account - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
