--- a/research_platform/templates/analytics/trending_topics.html
+++ b/research_platform/templates/analytics/trending_topics.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Trending Topics - Research Platform{% endblock %}
+{% block title %}Trending Topics - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
