--- a/research_platform/templates/chat/detail.html
+++ b/research_platform/templates/chat/detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Chat Room - {{ paper.title }} - Research Platform{% endblock %}
+{% block title %}Chat Room - {{ paper.title }} - Orravyn Research{% endblock %}
 
 {% block content %}
 <div class="row">
