--- a/research_platform/templates/chat/room.html
+++ b/research_platform/templates/chat/room.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Discussion - {{ paper.title }} - Research Platform{% endblock %}
+{% block title %}Discussion - {{ paper.title }} - Orravyn Research{% endblock %}
 
 {% block content %}
 <div class="row">
