--- a/research_platform/templates/accounts/login.html
+++ b/research_platform/templates/accounts/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Sign In - Research Platform{% endblock %}
+{% block title %}Sign In - Orravyn Research{% endblock %}
 
 {% block content %}
 <div class="auth-page">
