--- a/research_platform/templates/accounts/profile_edit.html
+++ b/research_platform/templates/accounts/profile_edit.html
@@ -189,16 +189,14 @@
                 <div class="mb-3">
                     <label for="{{ form.first_name.id_for_label }}" class="form-label">First Name</label>
                     {{ form.first_name }}
-                    {% if form.first_name.help_text %}<div class="form-text">{{ form.first_name.help_text }}</div>{%
-                    endif %}
+                    {% if form.first_name.help_text %}<div class="form-text">{{ form.first_name.help_text }}</div>{% endif %}
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="mb-3">
                     <label for="{{ form.last_name.id_for_label }}" class="form-label">Last Name</label>
                     {{ form.last_name }}
-                    {% if form.last_name.help_text %}<div class="form-text">{{ form.last_name.help_text }}</div>{% endif
-                    %}
+                    {% if form.last_name.help_text %}<div class="form-text">{{ form.last_name.help_text }}</div>{% endif %}
                 </div>
             </div>
         </div>
