--- a/research_platform/templates/accounts/public_profile.html
+++ b/research_platform/templates/accounts/public_profile.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ profile_user.profile.full_name }} - Research Platform{% endblock %}
+{% block title %}{{ profile_user.profile.full_name }} - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
