--- a/research_platform/templates/accounts/publishers_list.html
+++ b/research_platform/templates/accounts/publishers_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Publishers - Research Platform{% endblock %}
+{% block title %}Publishers - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
