--- a/research_platform/templates/analytics/collaboration_network.html
+++ b/research_platform/templates/analytics/collaboration_network.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Collaboration Network - Research Platform{% endblock %}
+{% block title %}Collaboration Network - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
