--- a/research_platform/templates/analytics/personal_dashboard.html
+++ b/research_platform/templates/analytics/personal_dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Research Dashboard - Research Platform{% endblock %}
+{% block title %}Research Dashboard - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
