--- a/research_platform/templates/chat/500.html
+++ b/research_platform/templates/chat/500.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Server Error - Research Platform{% endblock %}
+{% block title %}Server Error - Orravyn Research{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
