--- a/research_platform/templates/chat/yggdrasil_chatbot.html
+++ b/research_platform/templates/chat/yggdrasil_chatbot.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Yggdrasil Chatbot - Research Platform{% endblock %}
+{% block title %}Yggdrasil Chatbot - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
