--- a/research_platform/templates/messaging/notifications.html
+++ b/research_platform/templates/messaging/notifications.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Notifications - Research Platform{% endblock %}
+{% block title %}Notifications - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
