--- a/research_platform/templates/papers/blog_form.html
+++ b/research_platform/templates/papers/blog_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{% if object %}Edit Post{% else %}Write New Post{% endif %} - Research Platform{% endblock %}
+{% block title %}{% if object %}Edit Post{% else %}Write New Post{% endif %} - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
