--- a/research_platform/templates/papers/blog_list.html
+++ b/research_platform/templates/papers/blog_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Research Blog - Research Platform{% endblock %}
+{% block title %}Research Blog - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
