--- a/research_platform/templates/papers/blog_pending.html
+++ b/research_platform/templates/papers/blog_pending.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Pending Blog Posts - Research Platform{% endblock %}
+{% block title %}Pending Blog Posts - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
