modified:   research_platform/templates/papers/category_requests.html 	modified:   research_platform/templates/search/saved_searches.html

--- a/research_platform/templates/papers/category_request_form.html
+++ b/research_platform/templates/papers/category_request_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Request New Category - Research Platform{% endblock %}
+{% block title %}Request New Category - Orravyn Research{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
