--- a/research_platform/templates/papers/reading_lists.html
+++ b/research_platform/templates/papers/reading_lists.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Reading Lists - Research Platform{% endblock %}
+{% block title %}Reading Lists - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
