--- a/research_platform/templates/papers/reading_list_detail.html
+++ b/research_platform/templates/papers/reading_list_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ reading_list.name }} - Research Platform{% endblock %}
+{% block title %}{{ reading_list.name }} - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
