modified:   research_platform/templates/papers/category_requests.html 	modified:   research_platform/templates/search/saved_searches.html

--- a/research_platform/templates/papers/category_requests.html
+++ b/research_platform/templates/papers/category_requests.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Category Requests - Research Platform{% endblock %}
+{% block title %}Category Requests - Orravyn Research{% endblock %}
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
