--- a/research_platform/templates/search/saved_searches.html
+++ b/research_platform/templates/search/saved_searches.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Saved Searches - Research Platform{% endblock %}
+{% block title %}Saved Searches - Orravyn Research{% endblock %}
 
 {% block extra_css %}
 <style>
